src/components/sidebarComponent/sidebar.less
@side-bar-width: 280px;
@side-bar-transition: 0.2s;

.dcg-calculator-api-container .dcg-sliding-interior {
  background-color: #fff;
  transition: @side-bar-transition;

  &.open-side-bar {
    transform: translate(@side-bar-width);
    box-shadow: -3px 0 14px #000;

    #graph-container {
      opacity: 0.5;
    }
  }
}

.dcg-calculator-api-container .dcg-expression-top-bar .side-bar-empty-space {
  display: none;

  @media only screen and (width: 450px) {
    & {
      display: block;
      width: 37px;
      height: 37px;
    }
  }
}

.dcg-calculator-api-container #side-bar-container {
  .sidebar-menu-btn {
    width: 40px;
    height: 40px;
    font-size: 1.1rem;
    line-height: 40px;
    display: grid;
    place-items: center;
    position: absolute;
    border-radius: 5px;
    text-shadow: -2px -2px 0 #fff, -2px 2px 0 #fff, 2px -2px 0 #fff, 2px 2px 0 #fff, 0 -2px 0 #fff, 0 2px 0 #fff,
      2px 0 0 #fff, -2px 0 0 #fff;

    top: 5px;
    left: 5px;
    z-index: 1;
    transition: opacity, transform @side-bar-transition;

    &:not(.dcg-hovered) {
      opacity: 0.6;
    }

    &.dcg-hovered {
      background: rgba(0, 0, 0, 0.15);
      text-shadow: none;
    }

    @media only screen and (min-width: 451px) {
      & {
        display: none;
      }
    }
  }

  .side-bar-content {
    width: @side-bar-width;
    background: #000;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
  }

  .side-bar-cover {
    opacity: 0;
    display: block;
    background: #000;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: @side-bar-width;
    z-index: -1;
    cursor: pointer;
  }

  &.open-side-bar {
    .sidebar-menu-btn {
      opacity: 0.5;
      transform: translate(@side-bar-width);
    }

    .side-bar-cover {
      z-index: 2;
    }
  }
}

.side-bar-content {
  color: #fff;
  display: flex;
  flex-direction: column;
  padding: 5px;

  .app-name {
    height: 46px;
    padding: 5px;
    font-size: 1.1rem;
    display: flex;
    align-items: center;
    border-bottom: 1px solid #333;
  }

  .new-blank-graph {
    display: flex;
    align-items: center;
    margin: 5px 0 8px;
    padding: 6px 6px 12px;
    cursor: pointer;
    border-bottom: 1px solid #333;

    .dcg-add-blank {
      transition: 0.2s;
      border: 1px solid rgba(255, 255, 255, 0.7);
      border-radius: 50%;
      width: 40px;
      height: 40px;
      text-align: center;
      line-height: 40px;
      font-size: 110%;
      margin-right: 10px;
    }

    &:focus {
      outline: none;

      .dcg-add-blank {
        background: #ffffff59;
      }
    }

    &.dcg-hovered {
      .dcg-add-blank {
        background: rgba(255, 255, 255, 0.15);
        transform: scale(1.05);
      }
      .new-graph-title {
        text-decoration: underline;
      }
    }
  }

  .side-bar-item {
    display: flex;
    flex-direction: row;
    gap: 8px;
    padding: 12px;
    font-size: 1.1rem;
    transition: 0.2s;
    cursor: pointer;

    &:focus {
      background: #444;
      outline: none;
    }

    &.seperator {
      border-top: 1px solid #333;
      padding-top: 15px;
    }

    &.dcg-hovered {
      .icon {
        transform: scale(1.05);
      }
      .label {
        text-decoration: underline;
      }
    }
  }
}

